# paq8px

./: .editorconfig  .gitignore  CHANGELOG  CMakeLists.txt  ContextMap2.cpp  DummyMixer.cpp  DummyMixer.hpp  Encoder.cpp  Hash.hpp  HashElementForBitHistoryState.hpp  HashElementForContextMap.hpp  HashElementForMatchPositions.hpp  HashElementForStationaryMap.hpp  LMS.cpp  LMS.hpp  LMS_AVX.cpp  LMS_SSE2.cpp  Mixer.cpp  Mixer.hpp  MixerFactory.cpp  Mixer_AVX2.cpp  Mixer_AVX2.hpp  Mixer_AVX512.cpp  Mixer_AVX512.hpp  Mixer_Neon.cpp  Mixer_Neon.hpp  Mixer_SSE2.cpp  Mixer_SSE2.hpp  Mixer_Scalar.cpp  Mixer_Scalar.hpp  Models.cpp  Models.hpp  OLS.cpp  OLS.hpp  OLS_double_SSE3.cpp  OLS_double_Scalar.cpp  OLS_factory.cpp  OLS_factory.hpp  OLS_float_SSE3.hpp  Predictor.hpp  (+16 more)
filter/: DecAlpha.cpp  DecAlphaFilter.hpp  Filters.hpp  TextParserStateInfo.hpp  base64.hpp  bmp.hpp  endianness16b.hpp  exe.hpp
lstm/: Activations.cpp  Activations.hpp  Adam.cpp  Adam.hpp  Adam_AVX.cpp  Adam_AVX.hpp  Adam_SSE2.cpp  Adam_SSE2.hpp  Adam_Scalar.cpp  Adam_Scalar.hpp  ByteModelToBitModel.cpp  ByteModelToBitModel.hpp  IOptimizer.hpp  Layer.cpp  Layer.hpp  LoadSave.hpp  Lstm.cpp  Lstm.hpp  LstmComponent.cpp  LstmComponent.hpp  LstmFactory.cpp  LstmFactory.hpp  LstmGate.cpp  LstmGate.hpp  LstmLayer.cpp  LstmLayer.hpp  LstmModel.cpp  LstmModel.hpp  LstmModelContainer.cpp  LstmModelContainer.hpp  PolynomialDecay.cpp  PolynomialDecay.hpp  Posit.hpp  SimdFunctions.cpp  SimdFunctions.hpp  SimdLstmModel.cpp  SimdLstmModel.hpp  SqrtLearningRateDecay.hpp  Utils.cpp  VectorFunctions.cpp  (+7 more)
model/: Audio16BitModel.cpp  Audio16BitModel.hpp  Audio8BitModel.cpp  Audio8BitModel.hpp  ContextModel.cpp  ContextModelAudio16.cpp  ContextModelAudio8.cpp  ContextModelDec.cpp  ContextModelGeneric.cpp  ContextModelImage1.cpp  ContextModelImage24.cpp  ContextModelImage4.cpp  ContextModelImage8.cpp  ContextModelJpeg.cpp  ContextModelText.cpp  DecAlphaModel.hpp  Image24BitModel.cpp  Image24BitModel.hpp  Image8BitModel.cpp  Image8BitModel.hpp  ImageModelsCommon.hpp  LinearPredictionModel.cpp  LinearPredictionModel.hpp  MatchInfo.cpp  MatchInfo.hpp  MatchModel.cpp  MatchModel.hpp  RecordModel.hpp  SimilarityEmaFunctions_AVX2.cpp  SimilarityEmaFunctions_Scalar.cpp  SimilarityModel.cpp  SimilarityModelPair.cpp
src/: AdaptiveMap.cpp  AdaptiveMap.hpp  ArithmeticEncoder.cpp  ArithmeticEncoder.hpp  Block.cpp  Bucket16.hpp  DivisionTable.hpp  DummyMixer.cpp  DummyMixer.hpp  Encoder.hpp  HashElementForStationaryMap.hpp  LMS.cpp  LMS_AVX.hpp  LMS_SSE2.hpp  LMS_Scalar.cpp  LMS_Scalar.hpp  LargeStationaryMap.cpp  LargeStationaryMap.hpp  Mixer.hpp  MixerFactory.cpp  MixerFactory.hpp  Mixer_Scalar.cpp  Mixer_Scalar.hpp  Models.cpp  Models.hpp  OLS.cpp  OLS_double_SSE3.hpp  OLS_double_Scalar.hpp  OLS_factory.cpp  OLS_float_SSE3.cpp  OLS_float_Scalar.cpp  OLS_float_Scalar.hpp  PredictorMainLstmOnly.cpp  PredictorMainLstmOnly.hpp  ResidualMap.cpp  ResidualMap.hpp  RingBuffer.hpp  SIMDType.hpp  Shared.cpp  Utils.hpp  (+2 more)
src/filter/: Filters.hpp  base64.hpp  eol.hpp  lzw.hpp
src/lstm/: Adam.hpp  Adam_AVX.cpp  Adam_AVX.hpp  Adam_Scalar.hpp  ByteModelToBitModel.cpp  LoadSave.cpp  Lstm.cpp  Lstm.hpp  LstmComponent.cpp  SqrtLearningRateDecay.cpp  Utils.cpp  Utils.hpp  VectorFunctions.hpp  VectorFunctions_AVX2.cpp  VectorFunctions_AVX2.hpp  VectorFunctions_SSE2.cpp  VectorFunctions_Scalar.hpp
src/model/: Audio16BitModel.cpp  Audio8BitModel.cpp  ContextModelAudio16.cpp  ContextModelAudio8.cpp  ContextModelDec.cpp  ContextModelGeneric.cpp  ContextModelImage1.cpp  ContextModelImage4.cpp  ContextModelImage8.cpp  Image24BitModel.cpp  Image24BitModel.hpp  Image8BitModel.cpp  Image8BitModel.hpp  ImageModelsCommon.hpp  LinearPredictionModel.cpp  LinearPredictionModel.hpp  MatchInfo.cpp  MatchModel.cpp  NormalModel.cpp  RecordModel.cpp  SimilarityEmaFunctionsFactory.cpp  SimilarityEmaFunctionsFactory.hpp  SimilarityEmaFunctions_AVX2.cpp  SimilarityEmaFunctions_AVX2.hpp  SimilarityEmaFunctions_SSE41.cpp  SimilarityEmaFunctions_SSE41.hpp  SimilarityEmaFunctions_Scalar.hpp  SimilarityModel.cpp  SimilarityModel.hpp  SimilarityModelPair.cpp  SimilarityModelPair.hpp
zlib/: zlib.vcxproj  zlib.vcxproj.filters  zutil.h
